--- a/css/style.css
+++ b/css/style.css
@@ -26,9 +26,10 @@ header{
 .container{
     
     /* background-color:  #3161e0; */
-    border: 2px solid black;
-    height: 70px;
-   
+    /* border: 2px solid black; */
+    /* height: 70px; */
+   text-align: center;
+   padding-top:15px;
     
 }
 
@@ -37,15 +38,15 @@ header{
 
 }
 .logo-nav{
-    height: 70px;
+    
     /* perché devo dare altezza?? */
     width: 25%;
-    position: relative;
+    /* position: relative; */
 }
 .link-nav {
     
     width: 50%;
-    position: relative;
+    /* position: relative; */
 
     
 }
@@ -60,7 +61,7 @@ a{
     color: white;   
 }
 .button-nav{
-    height: 70px;
+    
     width: 25%;
     position:relative;
     
@@ -71,20 +72,36 @@ button{
     background-color:  white;
     padding:8px;
     border-radius: 20px;
+    
 }
  #logo-discord, button {
     
-    position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%); 
+   text-align: center;
 }
     .hero{
+        margin:20px 0;
         color: white;
-        font-size: xx-large;
+        font-size: large;
         position: absolute;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
      
+    }
+    .hero p{
+        margin: 50px 0 ;
+    }
+    .fas{
+        vertical-align: middle;
+        padding: 0 3px;
+        font-size: 18px;
+    }
+    .hero button{
+        margin: 0 10px;
+        border: none;
+    }
+    .hero button:last-child{
+        background-color: black;
+        color: white;
+        font-weight: 50px;
     }
